infrastructure/kubernetes/manifests/inventree/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventree-db
  namespace: shinbee
  labels:
    app.kubernetes.io/name: inventree-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: shinbee
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: inventree-db
  ports:
    - port: 3306
      targetPort: mysql
      protocol: TCP
      name: mysql
